Fixed text align

--- a/src/components/ProjectDetails/projectdetails.css
+++ b/src/components/ProjectDetails/projectdetails.css
@@ -75,6 +75,10 @@
     gap:100px;
 }
 
+.project-skills p{
+    text-align: center;
+}
+
 .project-details-title {
     position: relative;
 }
